# neural_signal_toolkit

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/references/: ACSR_NOTES.md
examples/: 01_filtering_demo.py  02_artifact_rejection_demo.py  03_timefreq_demo.py  04_decomposition_demo.py  05_onset_detection_demo.py
src/neural_signal_toolkit/: __init__.py  _utils.py  synth.py
src/neural_signal_toolkit/artifacts/: __init__.py  acsr.py  naive_tkeo.py  tkeo.py
src/neural_signal_toolkit/decomposition/: __init__.py
src/neural_signal_toolkit/detection/: __init__.py
src/neural_signal_toolkit/filtering/: __init__.py
src/neural_signal_toolkit/timefreq/: __init__.py
src/neural_signal_toolkit/viz/: __init__.py
tests/: test_core.py
